--- a/index.html
+++ b/index.html
@@ -9,54 +9,62 @@
 </head>
 
 <body>
-  <div class="aaa">
-    <img src="./eisenhower-matrix.jpg">
-    <a class="more_inf" 
+  <header class="header">
+    <img class="header__img" src="./eisenhower-matrix.jpg">
+    <a class="header__link" 
         href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-  </div>
-  <div class="centered-main-page-element">
-    <p id="topSectionForAddingElementToList">
-      <label for="new-task">Add Item</label>
-      <div class="task-row-wrapper">
-        <input id="new-task" class="task" type="text">
-        <button>Add</button>
+  </header>
+
+  <main class="main-page">
+    <section class="new-task">
+      <h3 class="new-task__title title">Add Item</h3>
+      <div class="new-task__box">
+        <input class="new-task__input input-text" type="text">
+        <button class="btn">Add</button>
       </div>
-    </p>
-    <h3>Todo</h3>
-    <ul id="incompleteTasks">
-      <li>
-        <input type="checkbox">
-        <label class="task">Pay Bills</label>
-        <input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete">
-          <img src="./remove.svg">
-        </button>
-      </li>
-      <li class="editMode">
-        <input type="checkbox">
-        <label class="task">Go Shopping</label>
-        <input type="text" 
-            value="Go Shopping" class="task">
-        <button class="edit">Save</button>
-        <button class="delete">
-          <img src="./remove.svg">
-        </button>
-      </li>
-    </ul>
-    <h3>Completed</h3>
-    <ul id="completed-tasks">
-      <li>
-        <input type="checkbox" checked>
-        <label class="task">See the Doctor</label>
-        <input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete">
-          <img src="./remove.svg">
-        </button>
-      </li>
-    </ul>
-  </div>
+    </section>
+
+    <section class="to-do">
+      <h3 class="to-do__title title">Todo</h3>
+      <ul class="to-do__list">
+        <li class="item">
+          <input class="item__checkbox" type="checkbox">
+          <label class="item__task">Pay Bills</label>
+          <input type="text" class="item__input input-text">
+          <button class="btn btn-edit">Edit</button>
+          <button class="btn-delete">
+            <img class="btn-delete__img" src="./remove.svg">
+          </button>
+        </li>
+        <li class="item item_edit-mode">
+          <input class="item__checkbox" type="checkbox">
+          <label class="item__task">Go Shopping</label>
+          <input type="text" 
+              value="Go Shopping" class="item__input input-text">
+          <button class="btn btn-edit">Save</button>
+          <button class="btn-delete">
+            <img class="btn-delete__img" src="./remove.svg">
+          </button>
+        </li>
+      </ul>  
+    </section>
+
+    <section class="completed-tasks">
+      <h3 class="completed-tasks__title title">Completed</h3>
+      <ul class="completed-tasks__box">
+        <li class="item">
+          <input class="item__checkbox" type="checkbox" checked>
+          <label class="item__task">See the Doctor</label>
+          <input type="text" class="item__input input-text">
+          <button class="btn btn-edit">Edit</button>
+          <button class="btn-delete">
+            <img class="btn-delete__img" src="./remove.svg">
+          </button>
+        </li>
+      </ul>
+    </section>
+  </main>
+
   <script src="app.js"></script>
 </body>
 
