--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <li class="item">
           <input class="item__checkbox" type="checkbox">
           <label class="item__task">Pay Bills</label>
-          <input type="text" class="item__input input-text">
+          <input class="item__input-text input-text" type="text">
           <button class="btn btn-edit">Edit</button>
           <button class="btn-delete">
             <img class="btn-delete__img" src="./remove.svg">
@@ -39,8 +39,8 @@
         <li class="item item_edit-mode">
           <input class="item__checkbox" type="checkbox">
           <label class="item__task">Go Shopping</label>
-          <input type="text" 
-              value="Go Shopping" class="item__input input-text">
+          <input class="item__input-text input-text"  
+              type="text" value="Go Shopping" >
           <button class="btn btn-edit">Save</button>
           <button class="btn-delete">
             <img class="btn-delete__img" src="./remove.svg">
@@ -55,7 +55,7 @@
         <li class="item">
           <input class="item__checkbox" type="checkbox" checked>
           <label class="item__task">See the Doctor</label>
-          <input type="text" class="item__input input-text">
+          <input class="item__input-text input-text" type="text">
           <button class="btn btn-edit">Edit</button>
           <button class="btn-delete">
             <img class="btn-delete__img" src="./remove.svg">
