--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <header class="header">
-    <img class="header__img" src="./eisenhower-matrix.jpg">
+    <img class="header__img" src="./eisenhower-matrix.jpg" alt="logo">
     <a class="header__link" 
         href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </header>
@@ -33,7 +33,7 @@
           <input class="item__input-text input-text" type="text">
           <button class="btn btn-edit">Edit</button>
           <button class="btn-delete">
-            <img class="btn-delete__img" src="./remove.svg">
+            <img class="btn-delete__img" src="./remove.svg" alt="delete icon">
           </button>
         </li>
         <li class="item item_edit-mode">
@@ -43,7 +43,7 @@
               type="text" value="Go Shopping" >
           <button class="btn btn-edit">Save</button>
           <button class="btn-delete">
-            <img class="btn-delete__img" src="./remove.svg">
+            <img class="btn-delete__img" src="./remove.svg" alt="delete icon">
           </button>
         </li>
       </ul>  
@@ -58,7 +58,7 @@
           <input class="item__input-text input-text" type="text">
           <button class="btn btn-edit">Edit</button>
           <button class="btn-delete">
-            <img class="btn-delete__img" src="./remove.svg">
+            <img class="btn-delete__img" src="./remove.svg" alt="delete icon">
           </button>
         </li>
       </ul>
